# web_upbit_auto_trading

./: .env.example  LICENSE  coin_monitor.py  config.py  create_admin.py  dbbackup.sh  gunicorn_config.py  mcp_proxy.py  mcp_server.py  mcp_web_server.py  pyproject.toml  readme.md  requirements.txt  run.py  start_gunicorn.sh  upbit_monitor.sh  volume_analyzer.py  volume_analyzer.sh
.github/workflows/: main_jhsun-app.yml
app/: __init__.py  forms.py  models.py  routes.py  websocket_handlers.py
app/api/: upbit_api.py
app/bot/: trading_bot.py
app/strategy/: __init__.py  adaptive.py  bollinger.py  bollinger_asymmetric.py  ensemble.py  rsi.py  rsi_selling_pressure.py  volatility.py  volume_base_buy.py
app/templates/: base.html  coin_recommendations.html  dashboard.html  favorites.html  index.html  login.html  profile.html  register.html  settings.html  thread_control.html  thread_monitor.html
app/templates/admin/: monitor_dashboard.html  panel.html
app/utils/: async_utils.py  caching.py  coin_recommender.py  encryption.py  logging_utils.py  scheduler_manager.py  shared.py  telegram_utils.py  thread_controller.py  thread_monitor.py  tickers.py
doc/: 손실_탈출_계산.xlsx
test/: file_downloader.py  sudden_drop_test.py  test.py  test_telegram.py  webfont_download_script.py
