[project]
name = "web-upbit-auto-trading"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.6",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "matplotlib>=3.10.3",
    "pandas-stubs==2.2.3.250527",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.1",
    "pytz>=2025.2",
    "pyupbit>=0.2.34",
]
